--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "handlebars": "^4.7.8",
     "nodemailer": "^6.9.8",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
