--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cloudinary": "^1.41.1",
     "handlebars": "^4.7.8",
     "nodemailer": "^6.9.8",
     "reflect-metadata": "^0.1.13",
